fix: removed transparent scrollbar bg

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -134,15 +134,15 @@
   background: hsla(0, 0%, 100%, 0.2);
 }
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: #1f1f1f;
   border: 0px none #ffffff;
   border-radius: 0px;
 }
 ::-webkit-scrollbar-track:hover {
-  background: transparent;
+  background: #1f1f1f;
 }
 ::-webkit-scrollbar-track:active {
-  background: transparent;
+  background: #1f1f1f;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
